# public-datasets

./: .env.template  pyproject.toml  silver_spain_geojsons.ipynb
geojsons/: spain-communities.geojson
