[project]
name = "public-datasets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "awswrangler>=3.10.1",
    "fuzzywuzzy>=0.18.0",
    "geopandas>=1.0.1",
    "ipykernel>=6.29.5",
    "pyarrow>=19.0.1",
    "python-dotenv>=1.0.1",
]
